--- a/Scale.htm
+++ b/Scale.htm
@@ -10,10 +10,18 @@
 
                 var ChordType = {};
                 ChordType["Triad"] = [1, 3, 5];
+                ChordType["Second"] = [1, 2];
+                // ChordType["2nd"] = | Make this use chordType["Second"] 
+                ChordType["Third"] = [1, 3];
+                ChordType["Fifth"] = [1, 5];
+                ChordType["Sixth"] = [1, 6];
+                ChordType["Seventh"] = [1, 7];
                 ChordType["2 chord"] = [2, 4, 6];
                 ChordType["3 chord"] = [3, 5, 7];
                 ChordType["4 chord"] = [4, 6, 8];
                 ChordType["5 chord"] = [5, 7, 2];
+                ChordType["6 chord"] = [6, 8, 3];
+                ChordType["7 chord"] = [7, 8, 4];
                 ChordType["7"] = [1, 3, 5, 7];
                 ChordType["Scale"] = [1, 2, 3, 4, 5, 6, 7, 8]
             
