Scale.htm added fourths
Fourths added

--- a/Scale.htm
+++ b/Scale.htm
@@ -13,6 +13,7 @@
                 ChordType["Second"] = [1, 2];
                 // ChordType["2nd"] = | Make this use chordType["Second"] 
                 ChordType["Third"] = [1, 3];
+                ChordType["Fourth"] = [1, 4];
                 ChordType["Fifth"] = [1, 5];
                 ChordType["Sixth"] = [1, 6];
                 ChordType["Seventh"] = [1, 7];
