Scale.htm DropDown list
List shows up with hardcoded values

--- a/Scale.htm
+++ b/Scale.htm
@@ -1,7 +1,13 @@
 <html>
     <body>
-        <input type="text" id="KeyInput"=> Write key.</input>
-        <input type="text" id="ChordInput"=> Write chord.</input>
+        <select>
+            <option value="Item 1">Item 1</option>
+            <option value="Item 2">Item 2</option>
+            <option value="Item 3">Item 3</option>
+            <option value="Item 4">Item 4</option>
+        </select>
+        <!-- <input type="text" id="KeyInput"=> Write key.</input> -->
+        <!-- <input type="text" id="ChordInput"=> Write chord.</input> -->
         <button onclick="test()">Submit</button>
         <div id="NoteOutput"></div> 
         <p> Chords are formatted : </br> Triad </br> 7 </br> 5 Chord, etc </p>
