--- a/Scale.htm
+++ b/Scale.htm
@@ -23,6 +23,7 @@
                 ChordType["5 chord"] = [5, 7, 2];
                 ChordType["6 chord"] = [6, 8, 3];
                 ChordType["7 chord"] = [7, 8, 4];
+                ChordType["6"] = [1, 3, 5, 6];
                 ChordType["7"] = [1, 3, 5, 7];
                 ChordType["Scale"] = [1, 2, 3, 4, 5, 6, 7, 8]
             
