Scale.htm v 2.4 GUI
Added patchnotes
Added How to use

--- a/Scale.htm
+++ b/Scale.htm
@@ -6,7 +6,16 @@
          <!-- <input type="text" id="ChordInput"=> Write chord.</input> -->
         <button onclick="test()">Submit</button>
         <div id="NoteOutput"></div> 
-        <p> Chords are formatted : </br> Triad </br> 7 </br> 5 Chord, etc </p>
+        <p><h1>How to use: </p>
+        <p><h3>This program outputs chords in a selected key. <br> Use the first dropdown menu to select the key, then, use the second one to select the chord. 
+        <br> Click submit and recive the requested chord.</p>
+        <p>
+            <h4>Patchnotes:
+                <br><h5> Version 2.4
+                <br>+ "How to use"
+                <br>+ Patchnotes
+                <br>* UI work in progress
+        </p>
         <script> 
 
             function test() {
