Repo Updates No version change

--- a/Scale.htm
+++ b/Scale.htm
@@ -16,6 +16,9 @@
                 <br>+ Patchnotes
                 <br>* UI work in progress
         </p>
+        <style>
+            
+        </style>
         <script> 
 
             function test() {
