Added hr between HowTU and Patchnotes
Version 2.4.2

--- a/Scale.htm
+++ b/Scale.htm
@@ -9,6 +9,7 @@
         <p><h1>How to use: </p>
         <p><h3>This program outputs chords in a selected key. <br> Use the first dropdown menu to select the key, then, use the second one to select the chord. 
         <br> Click submit and recive the requested chord.</p>
+        <hr>
         <p>
             <h4>Patchnotes:
                 <br><h5> Version 2.4
@@ -17,7 +18,15 @@
                 <br>* UI work in progress
         </p>
         <style>
-            
+            hr { 
+                display: block;
+                margin-top: 0.5em;
+                margin-bottom: 0.5em;
+                margin-left: auto;
+                margin-right: auto;
+                border-style: inset;
+                border-width: 1px;
+} 
         </style>
         <script> 
 
