Added minor scales V 2.6

--- a/Scale.htm
+++ b/Scale.htm
@@ -74,12 +74,19 @@
         
             var scales = {};
             scales["C"] = ["C", "D", "E", "F", "G", "A", "B", "C"];
+            scales["Cm"] = ["C", "D", "Eb", "F", "G", "A", "B", "C"]
             scales["D"] = ["D", "E", "F#", "G", "A", "B", "C#", "D"];
+            scales["Dm"] = ["D", "E", "F", "G", "A", "B", "C#", "D"];
             scales["E"] = ["E", "F#", "G#", "A", "B", "C#", "D", "E"];
+            scales["Em"] = ["E", "F#", "G", "A", "B", "C#", "D", "E"];
             scales["F"] = ["F", "G", "A", "Bb", "C", "D", "E", "F"];
+            scales["Fm"] = ["F", "G", "Ab", "Bb", "C", "D", "E", "F"];
             scales["G"] = ["G", "A", "B", "C", "D", "E", "F#", "G"];
+            scales["Gm"] = ["G", "A", "A#", "C", "D", "E", "F#", "G"];
             scales["A"] = ["A", "B", "C#", "D", "E", "F#", "G#", "A"];
+            scales["Am"] = ["A", "B", "C", "D", "E", "F#", "G#", "A"];
             scales["B"] = ["B", "C#", "D#", "E", "F#", "G#", "A#", "B"];
+            scales["Bm"] = ["B", "C#", "D", "E", "F#", "G#", "A#", "B"];
             
 
 
