Patchnotes change no version change

--- a/Scale.htm
+++ b/Scale.htm
@@ -10,9 +10,9 @@
         <hr>
         <p>
             <h4>Patchnotes:
-                <br><h5> Version 2.4
-                <br>+ "How to use"
-                <br>+ Patchnotes
+                <br><h5> Version 2.6
+                <br>+ C, D, E, F, G, A, B, minor scales
+                <br>+ Code cleaned
                 <br>* UI work in progress
         </p>
         <div id="grad"></div>
